--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      COMPOSE_PROJECT_NAME: ${COMPOSE_PROJECT_NAME:-milestone1}
     deploy:
       replicas: 3
     healthcheck:
