--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -85,9 +85,7 @@ services:
     restart: "no"
     volumes:
       - certs:/etc/lego
-    depends_on:
-      haproxy:
-        condition: service_healthy
+    network_mode: host
     command: 
       - --email=${EMAIL}
       - --domains=${DOMAIN}
