--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -19,7 +19,7 @@ defaults
 
 frontend http_front
     bind *:80
-    bind *:443 ssl crt "/etc/haproxy/certs/${DOMAIN}.pem" alpn h2,http/1.1 strict-sni
+    bind *:443 ssl crt "/etc/haproxy/certs/${DOMAIN}.pem" alpn h2,http/1.1 strict-sni crt-ignore-err all
     
     # ACME challenge handling - forward to lego container
     acl is_acme_challenge path_beg /.well-known/acme-challenge/
