--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      COMPOSE_PROJECT_NAME: ${COMPOSE_PROJECT_NAME:-milestone1}
+      COMPOSE_PROJECT_NAME: ${COMPOSE_PROJECT_NAME}
     deploy:
       replicas: 3
     healthcheck:
@@ -86,7 +86,9 @@ services:
     restart: "no"
     volumes:
       - certs:/etc/lego
-    network_mode: host
+    depends_on:
+      - serviceName: haproxy
+        condition: service_healthy
     command: 
       - --email=${EMAIL}
       - --domains=${DOMAIN}
@@ -129,7 +131,7 @@ services:
       - EMAIL=${EMAIL}
       - DOMAIN=${DOMAIN}
       - ACME_SERVER=${ACME_SERVER:-https://acme-staging-v02.api.letsencrypt.org/directory}
-      - COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME:-milestone1}
+      - COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./docker-compose.yml:/docker-compose.yml:ro
