--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -19,16 +19,16 @@ defaults
 
 frontend http_front
     bind *:80
-    bind *:443 ssl crt-list /usr/local/etc/haproxy/crt-list.txt alpn h2,http/1.1 strict-sni
+    bind *:443 ssl crt-list /usr/local/etc/haproxy/crt-list.txt alpn h2,http/1.1
     
     # ACME challenge handling - forward to lego container
     acl is_acme_challenge path_beg /.well-known/acme-challenge/
     
-    # Redirect HTTP to HTTPS (except ACME challenges) - must come before use_backend
-    http-request redirect scheme https code 301 if !{ ssl_fc } !is_acme_challenge
-    
     # Route ACME challenges to lego
     use_backend lego_back if is_acme_challenge
+    
+    # Redirect HTTP to HTTPS (except ACME challenges)
+    http-request redirect scheme https code 301 if !{ ssl_fc } !is_acme_challenge
     
     default_backend http_back
 
