--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -19,7 +19,7 @@ defaults
 
 frontend http_front
     bind *:80
-    bind *:443 ssl /etc/haproxy/certs/certificates alpn h2,http/1.1
+    bind *:443 ssl crt /etc/haproxy/certs/certificates alpn h2,http/1.1
     
     # ACME challenge handling - forward to lego container
     acl is_acme_challenge path_beg /.well-known/acme-challenge/
