--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      COMPOSE_PROJECT_NAME: ${COMPOSE_PROJECT_NAME}
+      COMPOSE_PROJECT_NAME: milestone1
     deploy:
       replicas: 3
     healthcheck:
@@ -151,7 +151,7 @@ services:
       - EMAIL=${EMAIL}
       - DOMAIN=${DOMAIN}
       - ACME_SERVER=${ACME_SERVER:-https://acme-staging-v02.api.letsencrypt.org/directory}
-      - COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME}
+      - COMPOSE_PROJECT_NAME=milestone1
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./docker-compose.yml:/docker-compose.yml:ro
