--- a/Milestone 1/haproxy/haproxy.cfg
+++ b/Milestone 1/haproxy/haproxy.cfg
@@ -35,9 +35,9 @@ frontend http_front
 backend http_back
     balance roundrobin
     option httpchk GET /
-    server web1 contapa2-m1-dm-1:80 check
-    server web2 contapa2-m1-dm-2:80 check
-    server web3 contapa2-m1-dm-3:80 check
+    server web1 milestone1-contapa2-m1-dm-1:80 check
+    server web2 milestone1-contapa2-m1-dm-2:80 check
+    server web3 milestone1-contapa2-m1-dm-3:80 check
 
 backend lego_back
     # Forward ACME challenges to lego's built-in HTTP server
