--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -7,14 +7,12 @@ services:
       - certs:/certs
     command: sh -c "mkdir -p /certs/certificates && 
       apk add --no-cache openssl && 
-      if [ ! -f /certs/certificates/dummy.pem ]; then 
-        openssl req -x509 -newkey rsa:2048 -nodes -days 1 
-          -keyout /certs/certificates/dummy.key 
-          -out /certs/certificates/dummy.crt 
-          -subj '/CN=localhost'; 
-        cat /certs/certificates/dummy.crt /certs/certificates/dummy.key > /certs/certificates/dummy.pem;
-        rm /certs/certificates/dummy.crt /certs/certificates/dummy.key;
-      fi"
+      openssl req -x509 -newkey rsa:2048 -nodes -days 1 
+        -keyout /certs/certificates/dummy.key 
+        -out /certs/certificates/dummy.crt 
+        -subj '/CN=localhost' && 
+      cat /certs/certificates/dummy.crt /certs/certificates/dummy.key > /certs/certificates/dummy.pem &&
+      rm /certs/certificates/dummy.crt /certs/certificates/dummy.key"
     restart: "no"
 
   haproxy:
