--- a/Milestone 1/docker-compose.yml
+++ b/Milestone 1/docker-compose.yml
@@ -46,6 +46,8 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
+    ports:
+      - "8085:80"  # Required: expose first container on localhost:8085
     environment:
       MYSQL_HOST: contsql-m1-dm
       MYSQL_DATABASE: ${MYSQL_DATABASE}
