--- a/Milestone 2/infrastructure/dm-milestone2-chart/templates/backend-service.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/templates/backend-service.yaml
@@ -1,17 +1,17 @@
-{{- if .Values.singleApp.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "dm-milestone2-chart.fullname" . }}
+  name: {{ include "dm-milestone2-chart.fullname" . }}-backend
   labels:
     {{- include "dm-milestone2-chart.labels" . | nindent 4 }}
+    app.kubernetes.io/component: backend
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.backend.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.backend.service.port }}
       targetPort: http
       protocol: TCP
       name: http
   selector:
     {{- include "dm-milestone2-chart.selectorLabels" . | nindent 4 }}
-{{- end }}
+    app.kubernetes.io/component: backend
