--- a/Milestone 2/infrastructure/dm-milestone2-chart/templates/deployment.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.singleApp.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -5,9 +6,7 @@ metadata:
   labels:
     {{- include "dm-milestone2-chart.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
-  {{- end }}
   selector:
     matchLabels:
       {{- include "dm-milestone2-chart.selectorLabels" . | nindent 6 }}
@@ -76,3 +75,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
