--- a/Milestone 2/infrastructure/dm-milestone2-chart/templates/ingress.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/templates/ingress.yaml
@@ -24,6 +24,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
+    {{- $full := include "dm-milestone2-chart.fullname" . }}
     {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
@@ -35,9 +36,9 @@ spec:
             {{- end }}
             backend:
               service:
-                name: {{ include "dm-milestone2-chart.fullname" $ }}
+                name: {{ printf "%s-%s" $full .service }}
                 port:
-                  number: {{ $.Values.service.port }}
+                  number: {{ .port }}
           {{- end }}
     {{- end }}
 {{- end }}
