--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -1,17 +1,243 @@
 # Default values for dm-milestone2-chart.
+# Multi-component release: frontend, backend, postgres, and shared ingress.
+
+singleApp:
+  # Enable to deploy the original single deployment template (disabled for multi-component).
+  enabled: false
+
+replicaCount: 1
+
+# Global image pull secrets
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
+
+# Service account configuration
+serviceAccount:
+  create: true
+  automount: true
+  annotations: {}
+  name: ""
+
+podAnnotations: {}
+podLabels: {}
+
+podSecurityContext:
+  {}
+
+securityContext:
+  {}
+
+# Frontend configuration
+frontend:
+  image:
+    repository: ghcr.io/david-maat/linux-web-services-frontend
+    tag: latest
+    pullPolicy: IfNotPresent
+  service:
+    type: ClusterIP
+    port: 80
+  resources: {}
+  livenessProbe:
+    httpGet:
+      path: /
+      port: http
+  readinessProbe:
+    httpGet:
+      path: /
+      port: http
+
+# Backend configuration
+backend:
+  image:
+    repository: ghcr.io/david-maat/linux-web-services-backend
+    tag: latest
+    pullPolicy: IfNotPresent
+  service:
+    type: ClusterIP
+    port: 8000
+  env:
+    DB_CONNECTION: postgresql://postgres:postgres@{{ .Release.Name }}-postgres:5432/postgres
+  resources: {}
+  livenessProbe:
+    httpGet:
+      path: /health
+      port: http
+  readinessProbe:
+    httpGet:
+      path: /health
+      port: http
+
+# Postgres configuration (ephemeral unless persistence enabled)
+postgres:
+  image:
+    repository: postgres
+    tag: 15-alpine
+    pullPolicy: IfNotPresent
+  service:
+    type: ClusterIP
+    port: 5432
+  env:
+    POSTGRES_DB: postgres
+    POSTGRES_USER: postgres
+    POSTGRES_PASSWORD: postgres
+  resources: {}
+  persistence:
+    enabled: false
+    size: 1Gi
+
+# Shared ingress routing
+ingress:
+  enabled: true
+  className: "public"
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
+  hosts:
+    - host: milestone2.davidmaat.be
+      paths:
+        - path: /
+          pathType: Prefix
+          service: frontend
+          port: 80
+        - path: /user
+          pathType: Prefix
+          service: backend
+          port: 8000
+  tls:
+    - secretName: milestone2-letsencrypt
+      hosts:
+        - milestone2.davidmaat.be
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
+# Default values for dm-milestone2-chart.
+# Multi-component release: frontend, backend, postgres, and shared ingress.
+
+singleApp:
+  # Enable to deploy the original single deployment template (disabled for multi-component).
+  enabled: false
+
+replicaCount: 1
+
+# Global image pull secrets
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
+
+# Service account configuration
+serviceAccount:
+  create: true
+  automount: true
+  annotations: {}
+  name: ""
+
+podAnnotations: {}
+podLabels: {}
+
+podSecurityContext:
+  {}
+
+securityContext:
+  {}
+
+# Frontend configuration
+frontend:
+  image:
+    repository: milestone2-frontend
+    tag: latest
+    pullPolicy: IfNotPresent
+  service:
+    type: ClusterIP
+    port: 80
+  resources: {}
+  livenessProbe:
+    httpGet:
+      path: /
+      port: http
+  readinessProbe:
+    httpGet:
+      path: /
+      port: http
+
+# Backend configuration
+backend:
+  image:
+    repository: milestone2-backend
+    tag: latest
+    pullPolicy: IfNotPresent
+  service:
+    type: ClusterIP
+    port: 8000
+  env:
+    DB_CONNECTION: postgresql://postgres:postgres@{{ .Release.Name }}-postgres:5432/postgres
+  resources: {}
+  livenessProbe:
+    httpGet:
+      path: /health
+      port: http
+  readinessProbe:
+    httpGet:
+      path: /health
+      port: http
+
+# Postgres configuration (ephemeral unless persistence enabled)
+postgres:
+  image:
+    repository: postgres
+    tag: 15-alpine
+    pullPolicy: IfNotPresent
+  service:
+    type: ClusterIP
+    port: 5432
+  env:
+    POSTGRES_DB: postgres
+    POSTGRES_USER: postgres
+    POSTGRES_PASSWORD: postgres
+  resources: {}
+  persistence:
+    enabled: false
+    size: 1Gi
+
+# Shared ingress routing
+ingress:
+  enabled: true
+  className: "public"
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
+  hosts:
+    - host: milestone2.davidmaat.be
+      paths:
+        - path: /
+          pathType: Prefix
+          service: frontend
+          port: 80
+        - path: /user
+          pathType: Prefix
+          service: backend
+          port: 8000
+  tls:
+    - secretName: milestone2-letsencrypt
+      hosts:
+        - milestone2.davidmaat.be
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
+# Default values for dm-milestone2-chart.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+# Toggle the legacy single deployment template (disabled when using multi-component setup below).
+singleApp:
+  enabled: false
+
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
-
-# This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
-image:
-  repository: nginx
-  # This sets the pull policy for images.
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
@@ -38,10 +264,12 @@ podAnnotations: {}
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -58,20 +286,20 @@ service:
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  enabled: true
+  # MicroK8s ingress class defaults to "public" (nginx controller); adjust if customized.
+  className: "public"
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
   hosts:
-    - host: chart-example.local
+    - host: milestone2.davidmaat.be
       paths:
         - path: /
           pathType: ImplementationSpecific
-  tls: []
-    # - secretName: chart-example-tls
-    #   hosts:
-    #     - chart-example.local
+  tls:
+    - secretName: milestone2-letsencrypt
+      hosts:
+        - milestone2.davidmaat.be
 
 # -- Expose the service via gateway-api HTTPRoute
 # Requires Gateway API resources and suitable controller installed within the cluster
@@ -83,18 +311,18 @@ httpRoute:
   annotations: {}
   # Which Gateways this Route is attached to.
   parentRefs:
-  - name: gateway
-    sectionName: http
-    # namespace: default
+    - name: gateway
+      sectionName: http
+      # namespace: default
   # Hostnames matching HTTP header.
   hostnames:
-  - chart-example.local
+    - chart-example.local
   # List of rules and filters applied.
   rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /headers
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /headers
   #   filters:
   #   - type: RequestHeaderModifier
   #     requestHeaderModifier:
@@ -111,7 +339,8 @@ httpRoute:
   #     - name: version
   #       value: v2
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -142,14 +371,16 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
-volumes: []
+volumes:
+  []
   # - name: foo
   #   secret:
   #     secretName: mysecret
   #     optional: false
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
+volumeMounts:
+  []
   # - name: foo
   #   mountPath: "/etc/foo"
   #   readOnly: true
