--- a/Milestone 2/infrastructure/dm-milestone2-chart/values-backend.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values-backend.yaml
@@ -2,7 +2,7 @@ nameOverride: backend
 fullnameOverride: milestone2-backend
 
 image:
-  repository: milestone2-backend
+  repository: ghcr.io/david-maat/linux-web-services-backend
   tag: latest
   pullPolicy: IfNotPresent
 
