--- a/Milestone 2/infrastructure/dm-milestone2-chart/values-frontend.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values-frontend.yaml
@@ -2,7 +2,7 @@ nameOverride: frontend
 fullnameOverride: milestone2-frontend
 
 image:
-  repository: milestone2-frontend
+  repository: ghcr.io/david-maat/linux-web-services-frontend
   tag: latest
   pullPolicy: IfNotPresent
 
