--- a/Milestone 2/infrastructure/argocd/milestone2-app.yaml
+++ b/Milestone 2/infrastructure/argocd/milestone2-app.yaml
@@ -4,7 +4,11 @@ metadata:
   name: milestone2
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: frontend=ghcr.io/david-maat/linux-web-services-frontend:{{ .SHA }},backend=ghcr.io/david-maat/linux-web-services-backend:{{ .SHA }}
+    argocd-image-updater.argoproj.io/image-list: frontend=ghcr.io/david-maat/linux-web-services-frontend,backend=ghcr.io/david-maat/linux-web-services-backend
+    argocd-image-updater.argoproj.io/frontend.update-strategy: latest
+    argocd-image-updater.argoproj.io/backend.update-strategy: latest
+    argocd-image-updater.argoproj.io/frontend.allow-tags: regexp:^(?:[0-9a-f]{7,40})$
+    argocd-image-updater.argoproj.io/backend.allow-tags: regexp:^(?:[0-9a-f]{7,40})$
     argocd-image-updater.argoproj.io/frontend.helm.image-name: frontend.image.repository
     argocd-image-updater.argoproj.io/frontend.helm.tag-name: frontend.image.tag
     argocd-image-updater.argoproj.io/backend.helm.image-name: backend.image.repository
