--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -87,7 +87,7 @@ postgres:
 # Shared ingress routing
 ingress:
   enabled: true
-  className: "public"
+  className: "nginx"
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
   hosts:
