--- a/Milestone 2/infrastructure/dm-milestone2-chart/templates/postgres-deployment.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/templates/postgres-deployment.yaml
@@ -26,10 +26,21 @@ spec:
           image: "{{ .Values.postgres.image.repository }}:{{ .Values.postgres.image.tag }}"
           imagePullPolicy: {{ .Values.postgres.image.pullPolicy }}
           env:
-            {{- range $key, $value := .Values.postgres.env }}
-            - name: {{ $key }}
-              value: {{ $value | quote }}
-            {{- end }}
+            - name: POSTGRES_DB
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "dm-milestone2-chart.fullname" . }}-postgres
+                  key: POSTGRES_DB
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "dm-milestone2-chart.fullname" . }}-postgres
+                  key: POSTGRES_USER
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "dm-milestone2-chart.fullname" . }}-postgres
+                  key: POSTGRES_PASSWORD
           ports:
             - name: postgres
               containerPort: {{ .Values.postgres.service.port }}
