Added deploy delay for image build

--- a/Milestone 2/infrastructure/argocd/milestone2-app.yaml
+++ b/Milestone 2/infrastructure/argocd/milestone2-app.yaml
@@ -32,3 +32,7 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+  hooks:
+    - hookType: PreSync
+      hookPath: ""
+      hookCommand: ["sleep", "30"]
