--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -75,6 +75,10 @@ pgadmin:
     port: 80
   adminEmail: admin@example.com
   adminPassword: admin
+  server:
+    name: Postgres
+    group: Servers
+    sslmode: prefer
   resources: {}
 
 # Postgres configuration (ephemeral unless persistence enabled)
