add container_id ingress

--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -115,6 +115,10 @@ ingress:
           pathType: Prefix
           service: backend
           port: 8000
+        - path: /container_id
+          pathType: Prefix
+          service: backend
+          port: 8000
         - path: /admin
           pathType: Prefix
           service: pgadmin
