--- a/Milestone 2/infrastructure/dm-milestone2-chart/templates/frontend-deployment.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/templates/frontend-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "dm-milestone2-chart.labels" . | nindent 4 }}
     app.kubernetes.io/component: frontend
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.frontend.replicaCount | default .Values.replicaCount }}
   selector:
     matchLabels:
       {{- include "dm-milestone2-chart.selectorLabels" . | nindent 6 }}
