--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -108,6 +108,7 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     nginx.ingress.kubernetes.io/upstream-keepalive: "0"
+    nginx.ingress.kubernetes.io/load-balance: "round_robin"
   hosts:
     - host: milestone2.davidmaat.be
       paths:
