--- a/Milestone 2/infrastructure/cert-manager/cloudflare-dns01.yaml
+++ b/Milestone 2/infrastructure/cert-manager/cloudflare-dns01.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   acme:
     email: maatdavid@yahoo.com
-    server: https://acme-v02.api.letsencrypt.org/directory
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: letsencrypt-production-key
     solvers:
