--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -107,6 +107,7 @@ ingress:
   className: "nginx"
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
+    nginx.ingress.kubernetes.io/keepalive: "0"
     nginx.ingress.kubernetes.io/upstream-keepalive-connections: "0"
     nginx.ingress.kubernetes.io/load-balance: "round_robin"
   hosts:
