--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -107,10 +107,10 @@ ingress:
   className: "nginx"
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
-    nginx.ingress.kubernetes.io/keepalive: "0"
-    nginx.ingress.kubernetes.io/use-http2: "false"
-    nginx.ingress.kubernetes.io/upstream-keepalive-connections: "0"
-    nginx.ingress.kubernetes.io/load-balance: "round_robin"
+    # nginx.ingress.kubernetes.io/keepalive: "0"
+    # nginx.ingress.kubernetes.io/use-http2: "false"
+    # nginx.ingress.kubernetes.io/upstream-keepalive-connections: "0"
+    # nginx.ingress.kubernetes.io/load-balance: "round_robin"
   hosts:
     - host: milestone2.davidmaat.be
       paths:
