--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -98,7 +98,7 @@ postgres:
   password: postgres
   resources: {}
   persistence:
-    enabled: false
+    enabled: true
     size: 1Gi
 
 # Shared ingress routing
