--- a/Milestone 2/infrastructure/dm-milestone2-chart/templates/backend-deployment.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/templates/backend-deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     {{- include "dm-milestone2-chart.labels" . | nindent 4 }}
     app.kubernetes.io/component: backend
 spec:
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit | default 10 }}
   replicas: {{ .Values.backend.replicaCount | default .Values.replicaCount }}
   selector:
     matchLabels:
