--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -7,6 +7,8 @@ singleApp:
 
 # Global replica count (kept for legacy/singleApp templates)
 replicaCount: 1
+# Number of old ReplicaSets to retain per Deployment
+revisionHistoryLimit: 1
 
 # Global image pull secrets
 imagePullSecrets: []
