--- a/Milestone 2/backend/Dockerfile
+++ b/Milestone 2/backend/Dockerfile
@@ -9,6 +9,13 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application source
 COPY . ./
 
+# Create non-root user and set ownership
+RUN useradd -m -u 1000 appuser && \
+    chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
+
 # Expose FastAPI port
 EXPOSE 8000
 
