--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -28,7 +28,7 @@ frontend:
   replicaCount: 2
   image:
     repository: ghcr.io/david-maat/linux-web-services-frontend
-    tag: latest  # Updated by ArgoCD Image Updater
+    tag: latest # Updated by ArgoCD Image Updater
     pullPolicy: Always
   service:
     type: ClusterIP
@@ -48,7 +48,7 @@ backend:
   replicaCount: 2
   image:
     repository: ghcr.io/david-maat/linux-web-services-backend
-    tag: latest  # Updated by ArgoCD Image Updater
+    tag: latest # Updated by ArgoCD Image Updater
     pullPolicy: Always
   service:
     type: ClusterIP
@@ -67,7 +67,7 @@ backend:
 pgadmin:
   image:
     repository: dpage/pgadmin4
-    tag: "8.16"  # Pin to stable version
+    tag: "8.13" # Use published tag; 8.16 missing on Docker Hub
     pullPolicy: IfNotPresent
   service:
     type: ClusterIP
@@ -84,7 +84,7 @@ pgadmin:
 postgres:
   image:
     repository: postgres
-    tag: "15.11-alpine"  # Pin to specific patch version
+    tag: "15.11-alpine" # Pin to specific patch version
     pullPolicy: IfNotPresent
   service:
     type: ClusterIP
