--- a/Milestone 2/infrastructure/dm-milestone2-chart/templates/postgres-deployment.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/templates/postgres-deployment.yaml
@@ -38,7 +38,10 @@ spec:
             - name: run
               mountPath: /var/run/postgresql
       securityContext:
+        runAsUser: 999
+        runAsGroup: 999
         fsGroup: 999
+        fsGroupChangePolicy: Always
         seccompProfile:
           type: RuntimeDefault
       {{- with .Values.imagePullSecrets }}
