--- a/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/values.yaml
@@ -34,14 +34,27 @@ frontend:
     type: ClusterIP
     port: 8080
   resources: {}
+  startupProbe:
+    httpGet:
+      path: /
+      port: http
+    initialDelaySeconds: 5
+    periodSeconds: 5
+    failureThreshold: 12  # allow ~60s for first start
   livenessProbe:
     httpGet:
       path: /
       port: http
+    initialDelaySeconds: 10
+    periodSeconds: 10
+    failureThreshold: 6
   readinessProbe:
     httpGet:
       path: /
       port: http
+    initialDelaySeconds: 5
+    periodSeconds: 5
+    failureThreshold: 6
 
 # Backend configuration
 backend:
