--- a/Milestone 2/infrastructure/dm-milestone2-chart/templates/frontend-deployment.yaml
+++ b/Milestone 2/infrastructure/dm-milestone2-chart/templates/frontend-deployment.yaml
@@ -18,10 +18,30 @@ spec:
         {{- include "dm-milestone2-chart.labels" . | nindent 8 }}
         app.kubernetes.io/component: frontend
     spec:
+      # Ensure log and runtime dirs are writable for non-root httpd
+      initContainers:
+        - name: init-frontend-perms
+          image: busybox:1.36
+          command:
+            - sh
+            - -c
+            - |
+              mkdir -p /usr/local/apache2/logs /usr/local/apache2/run
+              chown -R 82:82 /usr/local/apache2/logs /usr/local/apache2/run
+              chmod -R 775 /usr/local/apache2/logs /usr/local/apache2/run
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
+          volumeMounts:
+            - name: logs
+              mountPath: /usr/local/apache2/logs
+            - name: run
+              mountPath: /usr/local/apache2/run
       securityContext:
         runAsNonRoot: true
         runAsUser: 82  # httpd daemon user
         fsGroup: 82
+        fsGroupChangePolicy: Always
         seccompProfile:
           type: RuntimeDefault
       {{- with .Values.imagePullSecrets }}
@@ -55,3 +75,13 @@ spec:
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          volumeMounts:
+            - name: logs
+              mountPath: /usr/local/apache2/logs
+            - name: run
+              mountPath: /usr/local/apache2/run
+      volumes:
+        - name: logs
+          emptyDir: {}
+        - name: run
+          emptyDir: {}
